fix textarea whitespace in FF
Don't wrap lines, but do break at newline characters

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   padding: 0.5em;
   padding-right: 0;
   resize: none;
-  white-space: nowrap;
+  white-space: pre;
 }
 
 #preview {
